eu não aguento mais

--- a/Destinos/Home.html
+++ b/Destinos/Home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css/style.css">
     <link rel="stylesheet" href="/Css/slider.css">
-    <script src="Js/slide.js" defer></script>
+    <script src="/Js/slide.js" defer></script>
     <title>Apollo Teck</title>
     
 </head>
