--- a/Destinos/Maragogi.html
+++ b/Destinos/Maragogi.html
@@ -24,7 +24,7 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
-      
+
       .buy-btn {
         align-self: center;
         background-color: #3498db;
@@ -379,7 +379,7 @@
     <br>
     <br>
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
 
     <div class="modal">
       <div class="modal-content">
