--- a/Destinos/São Paulo.html
+++ b/Destinos/São Paulo.html
@@ -389,7 +389,7 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
 
     <div class="modal">
       <div class="modal-content">
