--- a/Destinos/pacotes.html
+++ b/Destinos/pacotes.html
@@ -101,7 +101,7 @@
       /></a>
       <h2>Bahia</h2>
       <p class="price">R$ 30,00</p>
-      <a href="Coqueirinho.html"><button class="buy-btn">Ver Mais</button></a>
+      <a href="Bahia.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
 
     </div>
