--- a/Destinos/Bahia.html
+++ b/Destinos/Bahia.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -38,20 +38,19 @@
         border-radius: 100px;
         width: 500px;
         height: 50px;
-        margin-left: 650px;
+        margin-left: 700px;
       }
       
     </style>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <img src="/img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 60px">Home</a>
+            <a href="Home.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -96,7 +95,7 @@
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg"
+            src="/img/HotelBA/hotel1.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -104,14 +103,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg"
+            src="/img/HotelBA/hotel2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg"
+            src="/img/HotelBA/hotel3.jpg"
             alt="imagem 3"
             class="img-thumbnail"
             onclick="openModal(2)"
@@ -119,7 +118,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg"
+            src="/img/HotelBA/hotel4.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -127,14 +126,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg"
+            src="/img/HotelBA/hotel5.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg"
+            src="/img/HotelBA/hotel6.jpg"
             alt="imagem 6"
             class="img-thumbnail"
             onclick="openModal(5)"
@@ -176,9 +175,9 @@
 
     <div class="ronaldo">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px">
+        <div class="col-md-3" style="margin-left: 500px">
           <img
-            src="img/Masp1.jpg"
+            src="/img/TurismoBA/historico3.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
@@ -186,27 +185,20 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/masp2.jpg"
+            src="/img/TurismoBA/historico4.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
           />
+          <img
+          style="margin-top: 10px;"
+          src="/img/TurismoBA/historico1.jpg"
+          class="img-thumbnail"
+          alt="imagem 9"
+          onclick="openModal(8)"
+        />
         </div>
         <div class="col-md-3">
-          <img
-            src="img/masp3.jpg"
-            class="img-thumbnail"
-            alt="imagem 9"
-            onclick="openModal(8)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
-          <img
-            src="img/masp4.jpg"
-            class="img-thumbnail"
-            alt="imagem 10"
-            onclick="openModal(9)"
-          />
         </div>
       </div>
     </div>
@@ -236,7 +228,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/ibi1.jpg"
+            src="/img/TurismoBA/fora4.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
@@ -244,7 +236,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/ibi2.png"
+            src="/img/TurismoBA/fora3.jpg"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
@@ -252,18 +244,10 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/ibi3.jpg"
+            src="/img/TurismoBA/fora1.jpg"
             class="img-thumbnail"
             alt="imagem 13"
             onclick="openModal(12)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px">
-          <img
-            src="img/ibi4.jpg"
-            class="img-thumbnail"
-            alt="imagem 14"
-            onclick="openModal(13)"
           />
         </div>
       </div>
@@ -295,7 +279,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/mercado1.jpg"
+            src="/img/TurismoBA/praia1.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
@@ -303,7 +287,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/mercado2.jpg"
+            src="/img/TurismoBA/praia2.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -311,20 +295,12 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/mercado3.png"
+            src="/img/TurismoBA/praia4.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
           />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
-          <img
-            src="img/mercado4.png"
-            class="img-thumbnail"
-            alt="imagem 18"
-            onclick="openModal(17)"
-          />
-        </div>
+        </div>   
       </div>
     </div>
     <br />
@@ -353,7 +329,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/liber1.jpg"
+            src="/img/TurismoBA/trancoso1.jpg"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(19)"
@@ -361,7 +337,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 20px">
           <img
-            src="img/liber2.jpg"
+            src="/img/TurismoBA/trancoso2.jpg"
             class="img-thumbnail"
             alt="imagem 19"
             onclick="openModal(20)"
@@ -369,7 +345,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/liber3.jpg"
+            src="/img/TurismoBA/trancoso3.jpg"
             class="img-thumbnail"
             alt="imagem 20"
             onclick="openModal(19)"
@@ -377,7 +353,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
           <img
-            src="img/liber4.jpg"
+            src="/img/TurismoBA/trancoso4.jpg"
             class="img-thumbnail"
             alt="imagem 21"
             onclick="openModal(20)"
@@ -388,7 +364,9 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
+    <br>
+    <br>
 
     <div class="modal">
       <div class="modal-content">
@@ -401,28 +379,28 @@
 
     <script>
       const imageUrls = [
-        "img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg",
-        "img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg",
-        "img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg",
-        "img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg",
-        "img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg",
-        "img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg",
-        "img/masp1.jpg",
-        "img/masp2.jpg",
-        "img/masp3.jpg",
-        "img/masp4.jpg",
-        "img/ibi1.jpg",
-        "img/ibi2.png",
-        "img/ibi3.jpg",
-        "img/ibi4.jpg",
-        "img/mercado1.jpg",
-        "img/mercado2.jpg",
-        "img/mercado3.png",
-        "img/mercado4.png",
-        "img/liber1.jpg",
-        "img/liber2.jpg",
-        "img/liber3.jpg",
-        "img/liber4.jpg",
+        "/img/HotelBA/hotel1.jpg",
+        "/img/HotelBA/hotel2.jpg",
+        "/img/HotelBA/hotel3.jpg",
+        "/img/HotelBA/hotel4.jpg",
+        "/img/HotelBA/hotel5.jpg",
+        "/img/HotelBA/hotel6.jpg",
+        "/img/TurismoBA/historico1.jpg",
+        "/img/TurismoBA/historico2.jpg",
+        "/img/TurismoBA/historico3.jpg",
+        "/img/Turismo/historico4.jpg",
+        "/img/TurismoBA/fora1.jpg",
+        "/img/TurismoBA/fora2.jpg",
+        "/img/TurismoBA/fora3.jpg",
+        "/img/TurismoBA/fora4.jpg",
+        "/img/TurismoBA/praia1.jpg",
+        "/img/TurismoBA/praia2.jpg",
+        "/img/TurismoBA/praia3.jpg",
+        "/img/TurismoBA/praia4.jpg",
+        "/img/TurismoBA/trancoso1.jpg",
+        "/img/TurismoBA/trancoso2.jpg",
+        "/img/TurismoBA/trancoso3.jpg",
+        "/img/TurismoBA/trancoso4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
