--- a/Destinos/Brasilia.html
+++ b/Destinos/Brasilia.html
@@ -391,7 +391,7 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
 
     <div class="modal">
       <div class="modal-content">
