--- a/Destinos/Itámaraca.html
+++ b/Destinos/Itámaraca.html
@@ -379,7 +379,7 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
 
 
     <div class="modal">
