--- a/Destinos/Manaus.html
+++ b/Destinos/Manaus.html
@@ -390,10 +390,8 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
-
-
-
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
+    
     <div class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
