--- a/Destinos/Maranhão.html
+++ b/Destinos/Maranhão.html
@@ -334,7 +334,7 @@
     <br />
     <br />
 
-    <button class="buy-btn">Comprar Pacote</button>
+    <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
 
     <div class="modal">
       <div class="modal-content">
