--- a/Destinos/Brasilia.html
+++ b/Destinos/Brasilia.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -45,13 +45,12 @@
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <img src="/img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 60px">Home</a>
+            <a href="Home.html" style="margin-left: 160px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -97,7 +96,7 @@
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra1.jpg"
+            src="/img/HotelBR/hotelbra1.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -105,14 +104,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra2.jpg"
+            src="/img/HotelBR/hotelbra2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/HotelBR/hotelbra3.jpg"
+            src="/img/HotelBR/hotelbra3.jpg"
             alt="Image 3"
             class="img-thumbnail"
             onclick="openModal(2)"
@@ -120,7 +119,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra4.jpg"
+            src="/img/HotelBR/hotelbra4.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -128,14 +127,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra5.jpg"
+            src="/img/HotelBR/hotelbra5.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="img/HotelBR/hotelbra6.jpg"
+            src="/img/HotelBR/hotelbra6.jpg"
             alt="Image 6"
             class="img-thumbnail"
             onclick="openModal(5)"
@@ -178,7 +177,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoBR/congre1.jpg"
+            src="/img/TurismoBR/congre1.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
@@ -186,7 +185,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 20px">
           <img
-            src="img/TurismoBR/congre2.webp"
+            src="/img/TurismoBR/congre2.webp"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
@@ -194,7 +193,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/congre3.jpg"
+            src="/img/TurismoBR/congre3.jpg"
             class="img-thumbnail"
             alt="imagem 9"
             onclick="openModal(8)"
@@ -202,7 +201,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/congre4.jpg"
+            src="/img/TurismoBR/congre4.jpg"
             class="img-thumbnail"
             alt="imagem 10"
             onclick="openModal(9)"
@@ -236,7 +235,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoBR/palacio1.jpg"
+            src="/img/TurismoBR/palacio1.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
@@ -244,7 +243,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoBR/palacio2.jpg"
+            src="/img/TurismoBR/palacio2.jpg"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
@@ -252,7 +251,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/palacio3.jpg"
+            src="/img/TurismoBR/palacio3.jpg"
             class="img-thumbnail"
             alt="imagem 13"
             onclick="openModal(12)"
@@ -260,7 +259,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 620px">
           <img
-            src="img/TurismoBR/palacio4.jpg"
+            src="/img/TurismoBR/palacio4.jpg"
             class="img-thumbnail"
             alt="imagem 14"
             onclick="openModal(13)"
@@ -296,7 +295,7 @@
         <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px;">
           <img
           
-            src="img/TurismoBR/catedral2.jpg"
+            src="/img/TurismoBR/catedral2.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
@@ -304,7 +303,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoBR/catedral3.jpg"
+            src="/img/TurismoBR/catedral3.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -312,7 +311,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/catedral1.jpg"
+            src="/img/TurismoBR/catedral1.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
@@ -320,7 +319,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 645px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/catedral4.jpg"
+            src="/img/TurismoBR/catedral4.jpg"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(17)"
@@ -356,7 +355,7 @@
         <div class="col-md-3" style="margin-left: 220px">
           <img
   
-            src="img/TurismoBR/jk1.png"
+            src="/img/TurismoBR/jk1.png"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(18)"
@@ -364,7 +363,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px;">
           <img
-            src="img/TurismoBR/jk4.png"
+            src="/img/TurismoBR/jk4.png"
             class="img-thumbnail"
             alt="imagem 19"
             onclick="openModal(19)"
@@ -372,7 +371,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/jk3.jpg"
+            src="/img/TurismoBR/jk3.jpg"
             class="img-thumbnail"
             alt="imagem 20"
             onclick="openModal(20)"
@@ -380,7 +379,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 670px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/jk2.jpg"
+            src="/img/TurismoBR/jk2.jpg"
             class="img-thumbnail"
             alt="imagem 21"
             onclick="openModal(21)"
@@ -392,6 +391,8 @@
     <br />
 
     <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
+    <br>
+    <br>
 
     <div class="modal">
       <div class="modal-content">
@@ -404,28 +405,28 @@
 
     <script>
       const imageUrls = [
-        "img/HotelBR/hotelbra1.jpg",
-        "img/HotelBR/hotelbra2.jpg",
-        "img/HotelBR/hotelbra3.jpg",
-        "img/HotelBR/hotelbra4.jpg",
-        "img/HotelBR/hotelbra5.jpg",
-        "img/HotelBR/hotelbra6.jpg",
-        "img/TurismoBR/congre1.jpg",
-        "img/TurismoBR/congre2.webp",
-        "img/TurismoBR/congre3.jpg",
-        "img/TurismoBR/congre4.jpg",
-        "img/TurismoBR/palacio1.jpg",
-        "img/TurismoBR/palacio2.jpg",
-        "img/TurismoBR/palacio3.jpg",
-        "img/TurismoBR/palacio4.jpg",
-        "img/TurismoBR/catedral2.jpg",
-        "img/TurismoBR/catedral3.jpg",
-        "img/TurismoBR/catedral1.jpg",
-        "img/TurismoBR/catedral4.jpg",
-        "img/TurismoBR/jk1.png",
-        "img/TurismoBR/jk4.png",
-        "img/TurismoBR/jk3.jpg",
-        "img/TurismoBR/jk2.jpg",
+        "/img/HotelBR/hotelbra1.jpg",
+        "/img/HotelBR/hotelbra2.jpg",
+        "/img/HotelBR/hotelbra3.jpg",
+        "/img/HotelBR/hotelbra4.jpg",
+        "/img/HotelBR/hotelbra5.jpg",
+        "/img/HotelBR/hotelbra6.jpg",
+        "/img/TurismoBR/congre1.jpg",
+        "/img/TurismoBR/congre2.webp",
+        "/img/TurismoBR/congre3.jpg",
+        "/img/TurismoBR/congre4.jpg",
+        "/img/TurismoBR/palacio1.jpg",
+        "/img/TurismoBR/palacio2.jpg",
+        "/img/TurismoBR/palacio3.jpg",
+        "/img/TurismoBR/palacio4.jpg",
+        "/img/TurismoBR/catedral2.jpg",
+        "/img/TurismoBR/catedral3.jpg",
+        "/img/TurismoBR/catedral1.jpg",
+        "/img/TurismoBR/catedral4.jpg",
+        "/img/TurismoBR/jk1.png",
+        "/img/TurismoBR/jk4.png",
+        "/img/TurismoBR/jk3.jpg",
+        "/img/TurismoBR/jk2.jpg",
       ];
 
       const modal = document.querySelector(".modal");
