--- a/Destinos/Brasilia.html
+++ b/Destinos/Brasilia.html
@@ -40,7 +40,6 @@
         height: 50px;
         margin-left: 650px;
       }
-      
     </style>
     <header>
       <div class="container2">
@@ -292,9 +291,8 @@
 
     <div class="Mercadão">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px;">
+        <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px">
           <img
-          
             src="/img/TurismoBR/catedral2.jpg"
             class="img-thumbnail"
             alt="imagem 15"
@@ -348,20 +346,19 @@
         </h2>
       </li>
     </ul>
-    <br>
+    <br />
 
     <div class="Liberdade">
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-  
             src="/img/TurismoBR/jk1.png"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(18)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px;">
+        <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px">
           <img
             src="/img/TurismoBR/jk4.png"
             class="img-thumbnail"
@@ -391,8 +388,8 @@
     <br />
 
     <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
-    <br>
-    <br>
+    <br />
+    <br />
 
     <div class="modal">
       <div class="modal-content">
