--- a/Destinos/pacotes.html
+++ b/Destinos/pacotes.html
@@ -9,8 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Css/style.css" />
-    <link rel="stylesheet" href="/Css/pacotes.css" />
+    <link rel="stylesheet" href="/Css/pacotes.css">
     <title>Apollo Teck - Pacotes</title>
+    <style>
+      
+    </style>
   </head>
   <body>
     <header>
