--- a/Destinos/pagamento.html
+++ b/Destinos/pagamento.html
@@ -58,7 +58,7 @@
                     <input type="checkbox" id="economicaWifi" onchange="calcularPreco('economica')"> Wi-Fi<br>
                     <input type="checkbox" id="economicaGuia" onchange="calcularPreco('economica')"> Guia Turístico<br>
                     <input type="checkbox" id="economicaAcessibilidade" onchange="calcularPreco('economica')"> Acessibilidade e Necessidades Especiais<br><br>
-                    <a href="boletos/saleconomica.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
+                    <a href="/boletos/saleconomica.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
                         Comprar
                     </button></a>
                 </div>
@@ -81,7 +81,7 @@
                     <input type="checkbox" id="executivaAlimentacao" onchange="calcularPreco('executiva')"> Alimentação<br>
                     <input type="checkbox" id="executivaGuia" onchange="calcularPreco('executiva')"> Guia Turístico<br>
                     <input type="checkbox" id="executivaAcessibilidade" onchange="calcularPreco('executiva')"> Acessibilidade e Necessidades Especiais<br><br>
-                    <a href="boletos/salexecutiva.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
+                    <a href="/boletos/salexecutiva.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
                         Comprar
                     </button></a>
                 </div>
@@ -104,7 +104,7 @@
                     <input type="checkbox" id="primeiraAlimentacao" onchange="calcularPreco('primeira')"> Alimentação<br>
                     <input type="checkbox" id="primeiraGuia" onchange="calcularPreco('primeira')"> Guia Turístico<br>
                     <input type="checkbox" id="primeiraAcessibilidade" onchange="calcularPreco('primeira')"> Acessibilidade e Necessidades Especiais<br><br>
-                    <a href="boletos/salprimeira.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
+                    <a href="/boletos/salprimeira.pdf"><button type="button" class="w-100 btn btn-lg btn-primary">
                         Comprar
                     </button></a>
                 </div>
