--- a/Destinos/Home.html
+++ b/Destinos/Home.html
@@ -134,7 +134,7 @@
           <div class="product">
             <a href="">
               <img
-                src="/img/mar-e-praia.jpg"
+                src="/img/sp.jpg"
                 alt=""
                 style="width: 90%; height: 90%"
               />
@@ -149,7 +149,7 @@
         <div class="product">
           <a href="">
             <img
-              src="/img/mar-e-praia.jpg"
+              src="/img/rj.png"
               alt=""
               style="width: 90%; height: 90%"
             />
@@ -164,7 +164,7 @@
 
         <div class="product">
           <a href="">
-            <img src="/img/mar-e-praia.jpg" 
+            <img src="/img/itama.jpg" 
             alt="" 
             style="width: 90%; height: 90%;"
             />
