--- a/Destinos/pacotes.html
+++ b/Destinos/pacotes.html
@@ -42,68 +42,80 @@
   <div class="Produtos" style="margin-top: 50px;">
     <div class="product" style="margin-left: 150px">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/sp.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>São Paulo</h2>
+      <h3>Tempo de Estadia: 4 dias</h3>
       <p class="price">R$ 50,00</p>
       <a href="São Paulo.html"><button class="buy-btn">Ver Mais</button></a>
+      <br>
+      <br>
+      <br>
     </div>
     <div class="product">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/bra.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Brasilia</h2>
+      <h3>Tempo de Estadia: 6 dias</h3>
       <p class="price">R$ 80,00</p>
       <a href="Brasilia.html"><button class="buy-btn">Ver Mais</button></a>
+      <br>
     </div>
     <div class="product">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/rj.png" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Rio de Janeiro</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 5 dias</h3>
+      <p class="price">R$ 300,00</p>
       <a href="Rio de Janeiro.html"
         ><button class="buy-btn">Ver Mais</button></a
       >
     </div>
     <div class="product">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/recife.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Recife</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 7 dias</h3>
+      <p class="price">R$ 100,00</p>
       <a href="Recife.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
     <div class="product" style="margin-left: 10px;">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/marago.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Maragogi</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 5 dias</h3>
+      <p class="price">R$ 150,00</p>
       <a href="Maragogi.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
     <div class="product" style="margin-left: 475px;">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="Itá-img" width="90%" height="90%"
+        ><img src="/img/itama.jpg" alt="Itá-img" width="90%" height="90%"
       /></a>
       <h2 style>Itamáraca</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 3 dias</h3>
+      <p class="price">R$ 100,00</p>
       <a href="Itámaraca.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
     <div class="product">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/maran.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Maranhão</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 2 dias</h3>
+      <p class="price">R$ 150,00</p>
       <a href="Maranhão.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
     <div class="product">
       <a href=""
-        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/bhaia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Bahia</h2>
-      <p class="price">R$ 30,00</p>
+      <h3>Tempo de Estadia: 8 dias</h3>
+      <p class="price">R$ 180,00</p>
       <a href="Bahia.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
 
