--- a/Bahia.html
+++ b/Bahia.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Css/style.css" />
-    <link rel="stylesheet" href="/Css/compra.css" />
-    <link rel="stylesheet" href="/Css/modal.css" />
+    <link rel="stylesheet" href="Css/style.css" />
+    <link rel="stylesheet" href="Css/compra.css" />
+    <link rel="stylesheet" href="Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>Brasília</title>
+    <title>São Paulo</title>
   </head>
   <body>
     <style>
@@ -38,17 +38,18 @@
         border-radius: 100px;
         width: 500px;
         height: 50px;
-        margin-left: 650px;
+        margin-left: 700px;
       }
+      
     </style>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="/img/apllogo.png" />
+          <img src="img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
-            <a href="Home.html" style="margin-left: 160px">Home</a>
+            <a href="Home.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
           </nav>
         </div>
@@ -69,7 +70,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-      Royal Tulip Brasília Alvorada
+      Porto Seguro Praia Resort
     </h2>
     <br />
     <h3
@@ -83,19 +84,18 @@
         margin-bottom: 20px;
       "
     >
-      cliente estará hospedado no luxuoso Royal Tulip Brasília Alvorada, situado
-      às margens do Lago Paranoá. Seu quarto é uma suíte executiva,
-      elegantemente decorada com design moderno e conforto. Oferece uma cama
-      king-size, área de estar espaçosa, vista panorâmica da cidade ou do lago,
-      banheiro em mármore com banheira de imersão e todas as comodidades
-      necessárias para uma estadia luxuosa.
+      O cliente estará hospedado no confortável Porto Seguro Praia Resort,
+      situado em frente às belas praias de Porto Seguro. Seu quarto é uma suíte
+      padrão, decorada com simplicidade e conforto, equipada com uma cama
+      king-size, área de estar, banheiro privativo e varanda com vista para o
+      mar ou para os jardins do resort.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-            src="/img/HotelBR/hotelbra1.jpg"
+            src="img/HotelBA/hotel1.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -103,22 +103,22 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelBR/hotelbra2.jpg"
+            src="img/HotelBA/hotel2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="/img/HotelBR/hotelbra3.jpg"
-            alt="Image 3"
+            src="img/HotelBA/hotel3.jpg"
+            alt="imagem 3"
             class="img-thumbnail"
             onclick="openModal(2)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelBR/hotelbra4.jpg"
+            src="img/HotelBA/hotel4.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -126,15 +126,15 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelBR/hotelbra5.jpg"
+            src="img/HotelBA/hotel5.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="/img/HotelBR/hotelbra6.jpg"
-            alt="Image 6"
+            src="img/HotelBA/hotel6.jpg"
+            alt="imagem 6"
             class="img-thumbnail"
             onclick="openModal(5)"
           />
@@ -163,9 +163,10 @@
             text-align: center;
           "
         >
-          Congresso Nacional: Visite o imponente edifício do Congresso Nacional,
-          projetado por Oscar Niemeyer, e conheça a história e o funcionamento
-          do poder legislativo brasileiro.
+          Centro Histórico de Porto Seguro: Explore o charmoso centro histórico
+          de Porto Seguro, com suas ruas de paralelepípedos, casarões coloniais,
+          igrejas antigas e o Marco do Descobrimento, símbolo da chegada dos
+          portugueses ao Brasil em 1500.
         </h2>
       </li>
     </ul>
@@ -174,37 +175,30 @@
 
     <div class="ronaldo">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px">
+        <div class="col-md-3" style="margin-left: 500px">
           <img
-            src="/img/TurismoBR/congre1.jpg"
+            src="img/TurismoBA/historico3.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px">
+        <div class="col-md-3">
           <img
-            src="/img/TurismoBR/congre2.webp"
+            src="img/TurismoBA/historico4.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
           />
+          <img
+          style="margin-top: 10px;"
+          src="img/TurismoBA/historico1.jpg"
+          class="img-thumbnail"
+          alt="imagem 9"
+          onclick="openModal(8)"
+        />
         </div>
         <div class="col-md-3">
-          <img
-            src="/img/TurismoBR/congre3.jpg"
-            class="img-thumbnail"
-            alt="imagem 9"
-            onclick="openModal(8)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
-          <img
-            src="/img/TurismoBR/congre4.jpg"
-            class="img-thumbnail"
-            alt="imagem 10"
-            onclick="openModal(9)"
-          />
         </div>
       </div>
     </div>
@@ -223,9 +217,9 @@
             text-align: center;
           "
         >
-          Palácio da Alvorada: Contemple a elegância do Palácio da Alvorada,
-          residência oficial do Presidente da República, com sua arquitetura
-          moderna e jardins exuberantes à beira do Lago Paranoá. livre.
+          Recife de Fora: Faça um passeio de barco até o Recife de Fora, um dos
+          melhores pontos de mergulho de Porto Seguro, onde é possível observar
+          a diversidade de vida marinha em meio aos recifes de coral.
         </h2>
       </li>
     </ul>
@@ -234,7 +228,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoBR/palacio1.jpg"
+            src="img/TurismoBA/fora4.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
@@ -242,7 +236,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="/img/TurismoBR/palacio2.jpg"
+            src="img/TurismoBA/fora3.jpg"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
@@ -250,18 +244,10 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoBR/palacio3.jpg"
+            src="img/TurismoBA/fora1.jpg"
             class="img-thumbnail"
             alt="imagem 13"
             onclick="openModal(12)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 620px">
-          <img
-            src="/img/TurismoBR/palacio4.jpg"
-            class="img-thumbnail"
-            alt="imagem 14"
-            onclick="openModal(13)"
           />
         </div>
       </div>
@@ -281,19 +267,19 @@
             text-align: center;
           "
         >
-          Catedral Metropolitana de Brasília: Maravilhe-se com a arquitetura
-          única da Catedral Metropolitana de Brasília, projetada por Oscar
-          Niemeyer, com seus vitrais coloridos e formas geométricas
-          impressionantes.
+          Praias de Arraial d'Ajuda: Explore as belas praias de Arraial d'Ajuda,
+          como a Praia do Mucugê, Praia de Pitinga e Praia da Lagoa Azul, com
+          suas águas cristalinas, falésias coloridas e ambiente tranquilo, ideal
+          para relaxar e aproveitar o sol.
         </h2>
       </li>
     </ul>
 
     <div class="Mercadão">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoBR/catedral2.jpg"
+            src="img/TurismoBA/praia1.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
@@ -301,7 +287,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="/img/TurismoBR/catedral3.jpg"
+            src="img/TurismoBA/praia2.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -309,20 +295,12 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoBR/catedral1.jpg"
+            src="/img/TurismoBA/praia4.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
           />
-        </div>
-        <div class="col-md-3" style="margin-left: 645px; margin-bottom: 20px">
-          <img
-            src="/img/TurismoBR/catedral4.jpg"
-            class="img-thumbnail"
-            alt="imagem 18"
-            onclick="openModal(17)"
-          />
-        </div>
+        </div>   
       </div>
     </div>
     <br />
@@ -340,46 +318,45 @@
             text-align: center;
           "
         >
-          Memorial JK: Conheça o Memorial JK, dedicado ao ex-presidente
-          Juscelino Kubitschek, responsável pela construção de Brasília, e
-          explore sua vida e legado através de exposições e acervos históricos.
+          Trancoso: Faça uma excursão até Trancoso, um charmoso vilarejo com
+          suas ruas de terra, casinhas coloridas, praças arborizadas e a famosa
+          Praia do Espelho, considerada uma das mais bonitas do Brasil.
         </h2>
       </li>
     </ul>
-    <br />
 
     <div class="Liberdade">
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoBR/jk1.png"
+            src="img/TurismoBA/trancoso1.jpg"
             class="img-thumbnail"
             alt="imagem 18"
-            onclick="openModal(18)"
+            onclick="openModal(19)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img
-            src="/img/TurismoBR/jk4.png"
+            src="img/TurismoBA/trancoso2.jpg"
             class="img-thumbnail"
             alt="imagem 19"
-            onclick="openModal(19)"
+            onclick="openModal(20)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoBR/jk3.jpg"
+            src="img/TurismoBA/trancoso3.jpg"
             class="img-thumbnail"
             alt="imagem 20"
-            onclick="openModal(20)"
+            onclick="openModal(19)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 670px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
           <img
-            src="/img/TurismoBR/jk2.jpg"
+            src="img/TurismoBA/trancoso4.jpg"
             class="img-thumbnail"
             alt="imagem 21"
-            onclick="openModal(21)"
+            onclick="openModal(20)"
           />
         </div>
       </div>
@@ -388,10 +365,10 @@
     <br />
 
     <a href="pagamento.html"><button class="buy-btn">Comprar Pacote</button></a>
-    <br />
-    <br />
     <br>
-
+    <br>
+    <br>
+    
     <div class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -403,28 +380,28 @@
 
     <script>
       const imageUrls = [
-        "/img/HotelBR/hotelbra1.jpg",
-        "/img/HotelBR/hotelbra2.jpg",
-        "/img/HotelBR/hotelbra3.jpg",
-        "/img/HotelBR/hotelbra4.jpg",
-        "/img/HotelBR/hotelbra5.jpg",
-        "/img/HotelBR/hotelbra6.jpg",
-        "/img/TurismoBR/congre1.jpg",
-        "/img/TurismoBR/congre2.webp",
-        "/img/TurismoBR/congre3.jpg",
-        "/img/TurismoBR/congre4.jpg",
-        "/img/TurismoBR/palacio1.jpg",
-        "/img/TurismoBR/palacio2.jpg",
-        "/img/TurismoBR/palacio3.jpg",
-        "/img/TurismoBR/palacio4.jpg",
-        "/img/TurismoBR/catedral2.jpg",
-        "/img/TurismoBR/catedral3.jpg",
-        "/img/TurismoBR/catedral1.jpg",
-        "/img/TurismoBR/catedral4.jpg",
-        "/img/TurismoBR/jk1.png",
-        "/img/TurismoBR/jk4.png",
-        "/img/TurismoBR/jk3.jpg",
-        "/img/TurismoBR/jk2.jpg",
+        "img/HotelBA/hotel1.jpg",
+        "img/HotelBA/hotel2.jpg",
+        "img/HotelBA/hotel3.jpg",
+        "img/HotelBA/hotel4.jpg",
+        "img/HotelBA/hotel5.jpg",
+        "img/HotelBA/hotel6.jpg",
+        "img/TurismoBA/historico1.jpg",
+        "img/TurismoBA/historico2.jpg",
+        "img/TurismoBA/historico3.jpg",
+        "img/Turismo/historico4.jpg",
+        "img/TurismoBA/fora1.jpg",
+        "img/TurismoBA/fora2.jpg",
+        "img/TurismoBA/fora3.jpg",
+        "img/TurismoBA/fora4.jpg",
+        "img/TurismoBA/praia1.jpg",
+        "img/TurismoBA/praia2.jpg",
+        "img/TurismoBA/praia3.jpg",
+        "img/TurismoBA/praia4.jpg",
+        "img/TurismoBA/trancoso1.jpg",
+        "img/TurismoBA/trancoso2.jpg",
+        "img/TurismoBA/trancoso3.jpg",
+        "img/TurismoBA/trancoso4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
@@ -433,7 +410,7 @@
 
       function openModal(index) {
         const carousel = modalContent.querySelector(".carousel");
-        carousel.innerHTML = "";
+        carousel.innerHTML = ""; // Limpa qualquer conteúdo anterior
 
         imageUrls.forEach((imageUrl, i) => {
           const img = document.createElement("img");
