--- a/Home.html
+++ b/Home.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Css/style.css" />
-    <link rel="stylesheet" href="/Css/slider.css" />
-    <script src="/Js/slide.js" defer></script>
+    <link rel="stylesheet" href="Css/style.css" />
+    <link rel="stylesheet" href="Css/slider.css" />
+    <script src="../Js/slide.js" defer></script>
     <title>Apollo Teck</title>
     <style>
       .product {
@@ -61,7 +61,7 @@
     <header>
       <div class="container2">
         <div class="logo">
-          <a href="Home.html"><img src="/img/apllogo.png" /></a>
+          <a href="Home.html"><img src="img/apllogo.png" /></a>
         </div>
         <div class="menu">
           <nav>
@@ -91,36 +91,31 @@
         <input type="radio" name="btn-radio" id="radio4" />
 
         <div class="slide-box primeiro">
-          <img class="img-desktop" src="/img/slide-1.jpg" alt="slide 1" />
-          <img class="img-mobile" src="/img/slide-1-mob.jpg" alt="slide 1" />
+          <img class="img-desktop" src="img/slide-4.jpg" alt="slide 1" />
         </div>
 
         <div class="slide-box">
-          <img class="img-desktop" src="/img/slide-2.jpg" alt="slide 3" />
-          <img class="img-mobile" src="/img/slide-2-mob.jpg" alt="slide 1" />
+          <img class="img-desktop" src="img/slide-3.jpg" alt="slide 3" />
+          <img class="img-mobile" src="img/slide-2-mob.jpg" alt="slide 1" />
         </div>
 
         <div class="slide-box">
-          <img class="img-desktop" src="/img/slide-3.jpg" alt="slide 3" />
-          <img class="img-mobile" src="/img/slide-3-mob.jpg" alt="slide 3" />
+          <img class="img-desktop" src="img/slide-2.jpg" alt="slide 3" />
+          <img class="img-mobile" src="img/slide-3-mob.jpg" alt="slide 3" />
         </div>
 
-        <div class="slide-box">
-          <img class="img-desktop" src="/img/slide-4.jpg" alt="slide 4" />
-        </div>
+       
 
         <div class="nav-auto">
           <div class="auto-btn1"></div>
           <div class="auto-btn2"></div>
           <div class="auto-btn3"></div>
-          <div class="auto-btn4"></div>
         </div>
 
         <div class="nav-manual">
           <label for="radio1" class="manual-btn"></label>
           <label for="radio2" class="manual-btn"></label>
           <label for="radio3" class="manual-btn"></label>
-          <label for="radio4" class="manual-btn"></label>
         </div>
       </div>
     </section>
@@ -134,7 +129,7 @@
           <div class="product">
             <a href="">
               <img
-                src="/img/sp.jpg"
+                src="img/sp.jpg"
                 alt=""
                 style="width: 90%; height: 90%"
               />
@@ -149,7 +144,7 @@
         <div class="product">
           <a href="">
             <img
-              src="/img/rj.png"
+              src="img/rj.png"
               alt=""
               style="width: 90%; height: 90%"
             />
@@ -164,7 +159,7 @@
 
         <div class="product">
           <a href="">
-            <img src="/img/itama.jpg" 
+            <img src="img/itama.jpg" 
             alt="" 
             style="width: 90%; height: 90%;"
             />
