--- a/Itámaraca.html
+++ b/Itámaraca.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Css/style.css" />
-    <link rel="stylesheet" href="/Css/compra.css" />
-    <link rel="stylesheet" href="/Css/modal.css" />
+    <link rel="stylesheet" href="Css/style.css" />
+    <link rel="stylesheet" href="Css/compra.css" />
+    <link rel="stylesheet" href="Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -45,7 +45,7 @@
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="/img/apllogo.png" />
+          <img src="img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
@@ -95,7 +95,7 @@
       <div class="row">
         <div class="col-md-3">
           <img
-            src="/img/HotelITA/ruinas1.jpg"
+            src="img/HotelITA/ruinas1.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -103,14 +103,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelITA/ruinas2.jpg"
+            src="img/HotelITA/ruinas2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="/img/HotelITA/ruinas3.jpg"
+            src="img/HotelITA/ruinas3.jpg"
             alt="imagem 3"
             class="img-thumbnail"
             onclick="openModal(2)"
@@ -118,7 +118,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelITA/ruinas4.jpg"
+            src="img/HotelITA/ruinas4.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -126,14 +126,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/HotelITA/ruinas5.jpg"
+            src="img/HotelITA/ruinas5.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="/img/HotelITA/ruinas6.jpg"
+            src="img/HotelITA/ruinas6.jpg"
             alt="imagem 6"
             class="img-thumbnail"
             onclick="openModal(5)"
@@ -176,7 +176,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoITA/coroa2.jpg"
+            src="img/TurismoITA/coroa2.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
@@ -184,14 +184,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoITA/coroa1.jpg"
+            src="img/TurismoITA/coroa1.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
           />
           <img
           style="margin-top: 20px;"
-          src="/img/TurismoITA/coroa4.jpg"
+          src="img/TurismoITA/coroa4.jpg"
           class="img-thumbnail"
           alt="imagem 10"
           onclick="openModal(9)"
@@ -199,7 +199,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoITA/coroa3.png"
+            src="img/TurismoITA/coroa3.png"
             class="img-thumbnail"
             alt="imagem 9"
             onclick="openModal(8)"
@@ -235,7 +235,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoITA/forte1.jpg"
+            src="img/TurismoITA/forte1.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
@@ -243,7 +243,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="/img/TurismoITA/forte2.jpg"
+            src="img/TurismoITA/forte2.jpg"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
@@ -251,7 +251,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoITA/forte3.jpg"
+            src="img/TurismoITA/forte3.jpg"
             class="img-thumbnail"
             alt="imagem 13"
             onclick="openModal(12)"
@@ -259,7 +259,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 700px">
           <img
-            src="/img/TurismoITA/forte4.jpg"
+            src="img/TurismoITA/forte4.jpg"
             class="img-thumbnail"
             alt="imagem 14"
             onclick="openModal(13)"
@@ -295,7 +295,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoITA/boi2.jpg"
+            src="img/TurismoITA/boi2.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
@@ -303,7 +303,7 @@
         </div>
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="/img/TurismoITA/boi1.jpg"
+            src="img/TurismoITA/boi1.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -311,7 +311,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoITA/boi3.jpg"
+            src="img/TurismoITA/boi3.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
@@ -349,7 +349,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="/img/TurismoITA/sossego1.jpeg"
+            src="img/TurismoITA/sossego1.jpeg"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(19)"
@@ -357,7 +357,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="/img/TurismoITA/sossego2.jpg"
+            src="img/TurismoITA/sossego2.jpg"
             class="img-thumbnail"
             alt="imagem 19"
             onclick="openModal(20)"
@@ -394,24 +394,24 @@
 
     <script>
       const imageUrls = [
-        "/img/HotelITA/ruinas1.jpg",
-        "/img/HotelITA/ruinas2.jpg",
-        "/img/HotelITA/ruinas3.jpg",
-        "/img/HotelITA/ruinas4.jpg",
-        "/img/HotelITA/ruinas5.jpg",
-        "/img/HotelITA/ruinas6.jpg",
-        "/img/TurismoITA/coroa2.jpg",
-        "/img/TurismoITA/coroa1.jpg",
-        "/img/TurismoITA/coroa4.jpg",
-        "/img/TurismoITA/coroa3.png",
-        "/img/TurismoITA/boi1.jpg",
-        "/img/TurismoITA/boi2.jpg",
-        "/img/TurismoITA/boi3.jpg",
-        "/img/TurismoITA/boi4.jpg",
-        "/img/TurismoITA/sossego1.jpeg",
-        "/img/TurismoITA/sossego2.jpg",
-        "/img/TurismoITA/sossego3.jpg",
-        "/img/TurismoITA/sossego4.jpg",
+        "img/HotelITA/ruinas1.jpg",
+        "img/HotelITA/ruinas2.jpg",
+        "img/HotelITA/ruinas3.jpg",
+        "img/HotelITA/ruinas4.jpg",
+        "img/HotelITA/ruinas5.jpg",
+        "img/HotelITA/ruinas6.jpg",
+        "img/TurismoITA/coroa2.jpg",
+        "img/TurismoITA/coroa1.jpg",
+        "img/TurismoITA/coroa4.jpg",
+        "img/TurismoITA/coroa3.png",
+        "img/TurismoITA/boi1.jpg",
+        "img/TurismoITA/boi2.jpg",
+        "img/TurismoITA/boi3.jpg",
+        "img/TurismoITA/boi4.jpg",
+        "img/TurismoITA/sossego1.jpeg",
+        "img/TurismoITA/sossego2.jpg",
+        "img/TurismoITA/sossego3.jpg",
+        "img/TurismoITA/sossego4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
