--- a/pagamento.html
+++ b/pagamento.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comprar Pacotes</title>
-    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://getbootstrap.com/docs/5.3/examples/pricing/pricing.css" rel="stylesheet" />
 </head>
@@ -23,7 +23,7 @@
 <header>
     <div class="container2">
         <div class="logo">
-            <img src="/img/apllogo.png">
+            <img src="img/apllogo.png">
         </div>
         <div class="menu">
             <nav>
